# lambda-lang

./: LICENSE  README.md  lambda-lang.cabal
src/: Interpreter.hs  Lang.hs  Main.hs  Parser.hs
